now it can generate the coverage data of only one product by ggiving the classpath to CoverageGenerator