@@ -4,15 +4,11 @@ import static org.junit.Assert.assertTrue;
 
 import java.io.ByteArrayInputStream;
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.util.HashMap;
-import java.util.Map;
 
 import javax.management.MBeanServerConnection;
 import javax.management.MBeanServerInvocationHandler;
@@ -29,24 +25,52 @@ import org.jacoco.core.analysis.ICounter;
 import org.jacoco.core.data.ExecutionDataReader;
 import org.jacoco.core.data.ExecutionDataStore;
 import org.jacoco.core.data.SessionInfoStore;
-import org.jacoco.core.instr.Instrumenter;
-import org.jacoco.core.runtime.IRuntime;
-import org.jacoco.core.runtime.LoggerRuntime;
-import org.jacoco.core.runtime.RuntimeData;
 import org.junit.Test;
 import org.junit.runner.Description;
 import org.junit.runner.JUnitCore;
 import org.junit.runner.notification.RunListener;
 
+import lab.square.spltcoverage.core.analysis.CoverageGenerator;
+import lab.square.spltcoverage.core.analysis.ICoverageRunner;
 import lab.square.spltcoverage.model.IProxy;
 
 public class CoverageGeneratorTest {
 	
-	private static final String BASE_DIRECTORY_URL = "file:///D:/workspace-featureide/Elevator-Antenna-v1.2/bin/";
+	private static final String BASE_DIRECTORY = "D:/workspace-featureide/Elevator-Antenna-v1.2/bin/";
 	private static final String CLASS_PATH = "D:\\workspace-featureide\\Elevator-Antenna-v1.2\\bin\\de\\ovgu\\featureide\\examples\\elevator\\test\\TestElevator.class";
 	private static final String CLASS_NAME = "de.ovgu.featureide.examples.elevator.test.TestElevator";
+	private static final String OUTPUT_PATH = "D:/test/";
 	
 	private static final String SERVICE_URL = "service:jmx:rmi:///jndi/rmi://localhost:7777/jmxrmi";
+	
+	@Test
+	public void testCoverageGenerator() {
+		CoverageGenerator generator = null;
+		try {
+			generator = new CoverageGenerator(System.out);
+		} catch (MalformedObjectNameException | IOException e) {
+			e.printStackTrace();
+		}
+		
+		generator.generateCoverage(new ICoverageRunner() {
+
+			@Override
+			public String[] getTestClassesPath() {
+				return new String[] { CLASS_PATH };
+			}
+
+			@Override
+			public String getClasspath() {
+				return BASE_DIRECTORY;
+			}
+
+			@Override
+			public String getOutputPath() {
+				return OUTPUT_PATH;
+			}
+			
+		});
+	}
 	
 	@Test
 	public void testJUnit() throws IOException, MalformedObjectNameException {
@@ -55,28 +79,12 @@ public class CoverageGeneratorTest {
 		final MBeanServerConnection connection = jmxc.getMBeanServerConnection();
 
 		IProxy proxy = MBeanServerInvocationHandler.newProxyInstance(connection,
-				new ObjectName("org.jacoco:type=Runtime"), IProxy.class, false);
-		
-		final IRuntime runtime = new LoggerRuntime();
-		try {
-			Class instrumented = loadInstrumentedClass(CLASS_PATH, runtime);
-		} catch (ClassNotFoundException | IOException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
-		final RuntimeData data = new RuntimeData();
-		try {
-			runtime.startup(data);
-		} catch (Exception e1) {
-			// TODO Auto-generated catch block
-			e1.printStackTrace();
-		}
-		
+				new ObjectName("org.jacoco:type=Runtime"), IProxy.class, false);		
 		
 		JUnitCore junit = new JUnitCore();
 		Class forTest = null;
 		try {
-			forTest = loadTestClassByPath(BASE_DIRECTORY_URL, CLASS_NAME);
+			forTest = loadClassByPath(BASE_DIRECTORY, convertPathToClassName(CLASS_PATH));
 		} catch (MalformedURLException | ClassNotFoundException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
@@ -94,8 +102,6 @@ public class CoverageGeneratorTest {
 		junit.run(forTest);
 		
 		
-		
-		
 		final ExecutionDataStore executionData = new ExecutionDataStore();
 		final SessionInfoStore sessionInfos = new SessionInfoStore();
 		
@@ -105,15 +111,13 @@ public class CoverageGeneratorTest {
 		reader.setExecutionDataVisitor(executionData);
 		reader.setSessionInfoVisitor(sessionInfos);
 		reader.read();
-		
-		runtime.shutdown();
 
 		// Together with the original class definition we can calculate coverage
 		// information:
 		final CoverageBuilder coverageBuilder = new CoverageBuilder();
 		final Analyzer analyzer = new Analyzer(executionData, coverageBuilder);
 		try {
-			analyzer.analyzeClass(new FileInputStream(new File(CLASS_PATH)), convertPathToClassName(CLASS_PATH));
+			analyzer.analyzeAll(BASE_DIRECTORY, null);
 		} catch (FileNotFoundException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
@@ -162,53 +166,9 @@ public class CoverageGeneratorTest {
 		return filtered;
 	}
 
-	/**
-	 * A class loader that loads classes from in-memory data.
-	 */
-	public static class MemoryClassLoader extends ClassLoader {
-
-		private final Map<String, byte[]> definitions = new HashMap<String, byte[]>();
-
-		/**
-		 * Add a in-memory representation of a class.
-		 *
-		 * @param name
-		 *            name of the class
-		 * @param bytes
-		 *            class definition
-		 */
-		public void addDefinition(final String name, final byte[] bytes) {
-			definitions.put(name, bytes);
-		}
-
-		@Override
-		protected Class<?> loadClass(final String name, final boolean resolve)
-				throws ClassNotFoundException {
-			final byte[] bytes = definitions.get(name);
-			if (bytes != null) {
-				return defineClass(name, bytes, 0, bytes.length);
-			}
-			return super.loadClass(name, resolve);
-		}
-	}
-
-	
-	private Class loadInstrumentedClass(String path, IRuntime runtime) throws ClassNotFoundException, IOException {
-		InputStream inputStream = new FileInputStream(new File(path));
-		
-		String name = convertPathToClassName(path);
-		
-		Instrumenter instrumenter = new Instrumenter(runtime);
-		final byte[] instrumented = instrumenter.instrument(inputStream, name);
-		MemoryClassLoader memoryClassLoader = new MemoryClassLoader();
-		memoryClassLoader.addDefinition(name, instrumented);
-
-		return memoryClassLoader.loadClass(name);
-	}
-	
-	private Class loadTestClassByPath(String path, String name) throws MalformedURLException, ClassNotFoundException {		
+	private Class loadClassByPath(String binPath, String name) throws MalformedURLException, ClassNotFoundException {		
 		URLClassLoader loader = URLClassLoader.newInstance(new URL[] {
-				new URL(path)
+				new File(binPath).toURI().toURL()
 		});
 		
 		return loader.loadClass(name);
